--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,4 +1,5 @@
 use_frameworks!
+platform :ios, '12.0'
 
 target 'NSAttributedString-Utils_Example' do
   pod 'NSAttributedString-Utils', :path => '../'
